feat (client): styles + filter by categories + seach

--- a/client/index.html
+++ b/client/index.html
@@ -16,10 +16,60 @@
     <link rel="stylesheet" href="./scss/style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">BSALE</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse navbar-nav me-auto mb-2 mb-lg-0"
+            id="navbarSupportedContent"
+          >
+            <select class="form-select">
+              <option selected>Categorias</option>
+            </select>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Categorias
+                </a>
+                <ul class="dropdown-menu"></ul>
+              </li>
+            </ul>
+            <form class="d-flex form_search" role="search">
+              <input
+                class="form-control me-2 input_form"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success" type="submit">
+                Search
+              </button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </header>
 
     <main>
-      <section class="products_container"></section>
+      <section class="products_container d-flex flex-wrap"></section>
     </main>
 
     <footer></footer>
