feat (client): styles + pagination + clean code

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">BSALE</a>
+          <a class="navbar-brand" href="./index.html">BSALE</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -86,9 +86,9 @@
       </nav>
     </header>
 
-    <main>
+    <main class="container-fluid">
       <section class="spiner_container"></section>
-      <section class="products_container d-flex flex-wrap"></section>
+      <section class="products_container"></section>
       <section
         class="pagination_container d-flex justify-content-center mt-3"
       ></section>
