--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,10 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">BSALE</a>
+          <div class="d-flex align-items-center me-4">
+            <a class="navbar-brand" href="./index.html">BSALE</a>
+            <a class="nav-link" href="./pages/doc.html">API</a>
+          </div>
           <button
             class="navbar-toggler"
             type="button"
