--- a/client/pages/doc.html
+++ b/client/pages/doc.html
@@ -24,7 +24,16 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <div class="d-flex align-items-center">
+            <a class="navbar-brand" href="../index.html">BSALE</a>
+            <a class="nav-link" href="./doc.html">API</a>
+          </div>
+        </div>
+      </nav>
+    </header>
 
     <main class="container">
       <section class="doc_container">
