fix (client/doc): bug fixed

--- a/client/pages/doc.html
+++ b/client/pages/doc.html
@@ -41,7 +41,7 @@
           <h3>GET lista de productos</h3>
           <ul>
             <li>
-              <span class="span_code">GET /products</span> retornara todos los
+              <span class="span_code">GET /product</span> retornara todos los
               productos
             </li>
           </ul>
